--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ i {
 header {
     background-color: var(--yellow);
     text-align: center;
-    padding-bottom: 2.5em;
+    padding-bottom: 4em;
 }
 
 h1 {
@@ -124,16 +124,6 @@ p {
     margin: auto;
 }
 
-.about__width .fadeout:after {
-    content: '';
-    position: absolute;
-    bottom: -1em;
-    left: 0;
-    width: 100%;
-    height: 5em;
-    background-image: linear-gradient(0deg, var(--turquoise) 10%, transparent 75%)
-}
-
 .about .fa-chevron-down {
     display: block;
     text-align: center;
@@ -142,12 +132,8 @@ p {
     font-size: 32px;
 }
 
-.about .fa-chevron-down:hover {
-    overflow: visible;
-}
-
 .ExpandMoreContent {
-    height: 10em;
+    height: 15em;
     overflow: hidden;
     transition: height 0.5s ease-in-out;
     position: relative;
@@ -156,6 +142,20 @@ p {
 .about .ExpandMoreContent p {
     border-top: 1px solid white;
     padding-top: 1.5em;
+}
+
+.ExpandMoreContent:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 5em;
+    background-image: linear-gradient(0deg, var(--turquoise) 10%, transparent 75%);
+}
+
+.ExpandMoreContent.expand-active:after {
+    display: none;
 }
 
 .ExpandMoreContent.expand-active {
@@ -169,9 +169,10 @@ p {
 }
 
 .btn-expand-more {
-    cursor: pointer;
-    border: 1px solid white;
-    display: inline-block;
+    border: 2px solid white;
+    border-radius: 28px;
+    padding: 10px;
+    margin: 2em;
 }
 
 .gallery {
