--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ p {
 
 .about .ExpandMoreContent p {
     border-top: 1px solid white;
-    padding-top: 1.5em;
+    padding: 1.5em 0 1.5em 0;
 }
 
 .ExpandMoreContent:after {
@@ -180,6 +180,10 @@ p {
     flex-direction: column;
 }
 
+.gallery__hover {
+    opacity: 0.5;
+}
+
 .gallery figure {
     margin: 0;
 }
@@ -190,8 +194,27 @@ p {
     object-fit: cover;
 }
 
-.gallery figcaption {
-    display: none;
+.gallery figure figcaption .popis {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: var(--turquoise);
+    font-weight: 700;
+}
+
+.gallery figure figcaption .kosik {
+    opacity: 0;
+    background-color: var(--turquoise);
+    border: 2px solid var(--turquoise);
+    padding: .7em;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
 }
 
 footer {
