--- a/style.css
+++ b/style.css
@@ -180,15 +180,13 @@ p {
     flex-direction: column;
 }
 
-.gallery__hover {
-    opacity: 0.5;
-}
-
-.gallery figure {
+.gallery .gallery__hover {
     margin: 0;
+    position: relative;
 }
 
-.gallery figure img {
+.gallery .gallery__hover img {
+    opacity: 0.3;
     width: 100%;
     height: 480px;
     object-fit: cover;
@@ -196,7 +194,7 @@ p {
 
 .gallery figure figcaption .popis {
     transition: .5s ease;
-    opacity: 0;
+    opacity: 1;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -207,7 +205,7 @@ p {
 }
 
 .gallery figure figcaption .kosik {
-    opacity: 0;
+    opacity:1;
     background-color: var(--turquoise);
     border: 2px solid var(--turquoise);
     padding: .7em;
