--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
+    width: 45%  ;
 }
 
 .navbar .navbar__flex01 {
